@@ -1,0 +1,1 @@
+<div>{{ value.title_with_suffix }}</div>
